(lang dune 2.0)

(name libutils)

(generate_opam_files true)
(license LGPLv3)

(package
  (name libutils)
  (synopsis "A collection of useful modules")
  (description "A collection of modules that I find very useful in OCaml projects")
  (maintainers "Martin Constantino–Bodin <martin.bodin@ens-lyon.org>")
  (source (github Mbodin/libutils))
  (homepage "https://mbodin.github.io/libutils/"))

